@@ -171,6 +171,7 @@ void GParted_Core::set_devices( std::vector<Device> & devices )
     			{
     				//try to have libparted detect the device and add it to the list
     				device = "/dev/" + device;
+    				/*TO TRANSLATORS: looks like Scanning /dev/sda ... */ 
     				set_thread_status_message( String::ucompose ( _("Scanning %1 ..."), device ) ) ;
     				ped_device_get( device .c_str() ) ;
     			}
@@ -218,6 +219,7 @@ void GParted_Core::set_devices( std::vector<Device> & devices )
 						continue;
 					if ( dm_majors .find( major( st.st_rdev ) ) != dm_majors .end() )
 						//TODO avoid probing partition nodes for dmraid devices
+	    				/*TO TRANSLATORS: looks like Scanning /dev/sda ... */ 
 	    				set_thread_status_message( String::ucompose ( _("Scanning %1 ..."), mapper_name ) ) ;
 						ped_device_get( mapper_name .c_str() ) ;
 				}
@@ -237,6 +239,7 @@ void GParted_Core::set_devices( std::vector<Device> & devices )
 			char * buf = static_cast<char *>( malloc( lp_device ->sector_size ) ) ;
 			if ( buf )
 			{
+				/*TO TRANSLATORS: looks like Reading /dev/sda ... */ 
 				set_thread_status_message( String::ucompose ( _("Reading %1 ..."), lp_device ->path ) ) ;
 				if ( ped_device_open( lp_device ) )
 				{
@@ -255,7 +258,8 @@ void GParted_Core::set_devices( std::vector<Device> & devices )
 	}
 
 	for ( unsigned int t = 0 ; t < device_paths .size() ; t++ ) 
-	{ 
+	{
+		/*TO TRANSLATORS: looks like Scanning /dev/sda for partitions ... */ 
 		set_thread_status_message( String::ucompose ( _("Scanning %1 for partitions ..."), device_paths[ t ] ) ) ;
 		if ( open_device_and_disk( device_paths[ t ], false ) )
 		{
