@@ -1,5 +1,7 @@
 2008-10-30  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/GParted_Core.cc: Added translator comments
+
 	* src/Win_GParted.cc: Added thread status message update to pulsebar
 
 	* include/GParted_Core.h,
